rego test. export endpoint. restructure permissions. docs
