# internal/entrypoints/api/handlers/entry.go
@@ -30,7 +30,8 @@ func NewEntryHandler(entryAdapter domain.EntryAdapter, secretAdapter domain.Secr
 // @Accept json
 // @Produce json
 // @Param data body []models.Entry true "Upsert template"
-// @Param authorization header string true "Bearer | Basic"
+// @Security 	 BasicAuth
+// @Security 	 BearerAuth
 // @Success 200 {object} map[string]string ""
 // @Failure 400 {object} problem.ProblemDetail "Bad Request"
 // @Failure 401 {object} problem.ProblemDetail "Unauthorized"
@@ -54,7 +55,8 @@ func (h *EntryHandler) Upsert(w http.ResponseWriter, r *http.Request) {
 // @Tags entry
 // @Produce json
 // @Param v query string true "key path"
-// @Param authorization header string true "Bearer | Basic"
+// @Security 	 BasicAuth
+// @Security 	 BearerAuth
 // @Success 200 {object} []models.Entry ""
 // @Failure 401 {object} problem.ProblemDetail "Unauthorized"
 // @Failure 500 {object} problem.ProblemDetail "Internal error"
@@ -78,7 +80,8 @@ func (h *EntryHandler) ListByPrefix(w http.ResponseWriter, r *http.Request) {
 // @Tags entry
 // @Produce json
 // @Param v query string true "key path"
-// @Param authorization header string true "Bearer | Basic"
+// @Security 	 BasicAuth
+// @Security 	 BearerAuth
 // @Success 200 {object} models.Entry ""
 // @Failure 401 {object} problem.ProblemDetail "Unauthorized"
 // @Failure 500 {object} problem.ProblemDetail "Internal error"
@@ -101,7 +104,8 @@ func (h *EntryHandler) GetByKey(w http.ResponseWriter, r *http.Request) {
 // @Tags entry
 // @Produce json
 // @Param v query string true "key path"
-// @Param authorization header string true "Bearer | Basic"
+// @Security 	 BasicAuth
+// @Security 	 BearerAuth
 // @Success 200 {object} object{message=string} ""
 // @Failure 401 {object} problem.ProblemDetail "Unauthorized"
 // @Failure 500 {object} problem.ProblemDetail "Internal error"
@@ -124,7 +128,8 @@ func (h *EntryHandler) DeleteKey(w http.ResponseWriter, r *http.Request) {
 // @Tags entry
 // @Produce json
 // @Param v query string true "key path"
-// @Param authorization header string true "Bearer | Basic"
+// @Security 	 BasicAuth
+// @Security 	 BearerAuth
 // @Success 200 {object} []models.Tracking ""
 // @Failure 401 {object} problem.ProblemDetail "Unauthorized"
 // @Failure 500 {object} problem.ProblemDetail "Internal error"
@@ -148,7 +153,8 @@ func (h *EntryHandler) Tracking(w http.ResponseWriter, r *http.Request) {
 // @Tags entry
 // @Produce json
 // @Param v query string true "key path"
-// @Param authorization header string true "Bearer | Basic"
+// @Security 	 BasicAuth
+// @Security 	 BearerAuth
 // @Success 200 {object} models.Entry ""
 // @Failure 401 {object} problem.ProblemDetail "Unauthorized"
 // @Failure 404 {object} problem.ProblemDetail "Not found"
